# blindstore

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  client.cpp  keygen.cpp
daemon/: main.cpp
include/: array.h  client.h
include/client/: client.h  keygen.h
server/: array.cpp
